# gate_disperser

./: .gitignore  README.md  install.bat  pyproject.toml  start.py
gate_disperser/: __init__.py  ask.py  config.py  disperse.py  gate.py  gate_custom_withdraw.py  paths.py  settings.py
gate_multisender/: __init__.py  ask.py  gate_custom_withdraw.py  multisender.py  paths.py  settings.py
